--- a/VIENNAAddIn/VIENNAAddIn.csproj
+++ b/VIENNAAddIn/VIENNAAddIn.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{5642201A-D4A3-4F3B-9BC5-71C3A0DB7EA3}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -348,6 +348,7 @@
     <Compile Include="validator\ExceptionEventArgs.cs" />
     <Compile Include="validator\IValidator.cs" />
     <Compile Include="validator\ErrorCheckingValidationContext.cs" />
+    <Compile Include="validator\upcc3\UPCCValidator.cs" />
     <Compile Include="validator\ValidationMessageAddedEventArgs.cs" />
     <Compile Include="validator\ProgressEventArgs.cs" />
     <Compile Include="validator\umm\bCollModelValidator.cs" />
@@ -659,6 +660,5 @@ xcopy /Y /E /I "$(ProjectDir)EA\CCTS" "$(TargetDir)EA\CCTS"</PostBuildEvent>
   <ItemGroup>
     <Folder Include="doc\" />
     <Folder Include="upcc3\XSDGenerator\UI\" />
-    <Folder Include="validator\upcc3\" />
   </ItemGroup>
 </Project>
