--- a/trunk/VIENNAAddIn/VIENNAAddIn.csproj
+++ b/trunk/VIENNAAddIn/VIENNAAddIn.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{5642201A-D4A3-4F3B-9BC5-71C3A0DB7EA3}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -218,6 +218,12 @@
     </Compile>
     <Compile Include="Settings\AddInSettings.cs" />
     <Compile Include="Settings\SynchStereotypes.cs" />
+    <Compile Include="Settings\SynchStereotypesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Settings\SynchStereotypesForm.Designer.cs">
+      <DependentUpon>SynchStereotypesForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="upcc3\ccts\ABIESpec.cs" />
     <Compile Include="upcc3\ccts\ASBIESpec.cs" />
     <Compile Include="upcc3\ccts\BBIESpec.cs" />
@@ -542,6 +548,10 @@ xcopy /Y /E /I "$(ProjectDir)EA\CCTS" "$(TargetDir)EA\CCTS"</PostBuildEvent>
     </EmbeddedResource>
     <EmbeddedResource Include="ExportImport\ImportPackage.resx">
       <DependentUpon>ImportPackage.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Settings\SynchStereotypesForm.resx">
+      <DependentUpon>SynchStereotypesForm.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Settings\SynchTaggedValue.resx">
