--- a/trunk/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
+++ b/trunk/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
@@ -77,6 +77,7 @@
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\EARepository1.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\EARepositoryTest.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\XSDGeneratorTest.cs" />
+    <Compile Include="MenuManagerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="AuthoringTests.txt" />
