--- a/VIENNAAddIn/VIENNAAddIn.csproj
+++ b/VIENNAAddIn/VIENNAAddIn.csproj
@@ -568,6 +568,7 @@ xcopy /Y /E /I "$(ProjectDir)EA\CCTS" "$(TargetDir)EA\CCTS"</PostBuildEvent>
     </EmbeddedResource>
     <EmbeddedResource Include="upcc3\Wizards\BDTWizardForm.resx">
       <DependentUpon>BDTWizardForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Utils\AboutWindow.resx">
       <DependentUpon>AboutWindow.cs</DependentUpon>
