--- a/trunk/VIENNAAddIn/VIENNAAddIn.csproj
+++ b/trunk/VIENNAAddIn/VIENNAAddIn.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{5642201A-D4A3-4F3B-9BC5-71C3A0DB7EA3}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -399,6 +399,8 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Utils\SortAttribute.cs" />
+    <Compile Include="VIENNAAddInEvents.cs" />
+    <Compile Include="VIENNAAddInInterface.cs" />
     <Compile Include="workflow\InitialPackageStructureCreator.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -457,11 +459,11 @@
     <Compile Include="XBRLGenerator\QDTGeneratorXBRL.Designer.cs">
       <DependentUpon>QDTGeneratorXBRL.cs</DependentUpon>
     </Compile>
-    <Compile Include="XBRLGenerator\XBRLGenerator.cs">
+    <Compile Include="XBRLGenerator\XBRLGeneratorForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="XBRLGenerator\XBRLGenerator.Designer.cs">
-      <DependentUpon>XBRLGenerator.cs</DependentUpon>
+    <Compile Include="XBRLGenerator\XBRLGeneratorForm.Designer.cs">
+      <DependentUpon>XBRLGeneratorForm.cs</DependentUpon>
     </Compile>
     <Compile Include="XBRLGenerator\XBRLLinkbase.cs">
       <SubType>Form</SubType>
@@ -636,8 +638,8 @@ xcopy /Y /E /I "$(ProjectDir)EA\CCTS" "$(TargetDir)EA\CCTS"</PostBuildEvent>
       <DependentUpon>QDTGeneratorXBRL.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="XBRLGenerator\XBRLGenerator.resx">
-      <DependentUpon>XBRLGenerator.cs</DependentUpon>
+    <EmbeddedResource Include="XBRLGenerator\XBRLGeneratorForm.resx">
+      <DependentUpon>XBRLGeneratorForm.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="XBRLGenerator\XBRLLinkbase.resx">
