Issue 43:  * Refactoring of EA_MenuClick.  * Moved most VIENNAAddIn methods to other classes.

--- a/VIENNAAddIn/VIENNAAddIn.csproj
+++ b/VIENNAAddIn/VIENNAAddIn.csproj
@@ -195,6 +195,7 @@
     <Compile Include="common\logging\LogType.cs" />
     <Compile Include="common\Utility.cs" />
     <Compile Include="constants\Constants.cs" />
+    <Compile Include="EARepositoryExtensions.cs" />
     <Compile Include="ErrorReporter\ErrorReporterForm.cs">
       <SubType>Form</SubType>
     </Compile>
