--- a/trunk/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
+++ b/trunk/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
@@ -41,6 +41,10 @@
       <HintPath>..\VIENNAAddIn\ext\Castle.DynamicProxy2.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=9.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="Moq, Version=3.0.308.2, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>ext\Moq.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=2.2.2.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\VIENNAAddIn\ext\nunit.framework.dll</HintPath>
@@ -79,7 +83,7 @@
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\EARepository1.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\EARepositoryTest.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\XSDGeneratorTest.cs" />
-    <Compile Include="MenuManagerTest.cs" />
+    <Compile Include="menu\MenuManagerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="AuthoringTests.txt" />
