--- a/trunk/VIENNAAddIn/VIENNAAddIn.csproj.user.sample
+++ b/trunk/VIENNAAddIn/VIENNAAddIn.csproj.user.sample
@@ -4,6 +4,6 @@
     <StartProgram>C:\Program Files\Sparx Systems\EA\EA.exe</StartProgram>
   </PropertyGroup>
   <PropertyGroup>
-    <ProjectView>ShowAllFiles</ProjectView>
+    <ProjectView>ProjectFiles</ProjectView>
   </PropertyGroup>
 </Project>
