--- a/VIENNAAddIn/VIENNAAddIn.csproj
+++ b/VIENNAAddIn/VIENNAAddIn.csproj
@@ -223,6 +223,12 @@
     <Compile Include="upcc3\Wizards\GeneratorWizardForm.Designer.cs">
       <DependentUpon>GeneratorWizardForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="upcc3\Wizards\UPCCModelWizardForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="upcc3\Wizards\UPCCModelWizardForm.Designer.cs">
+      <DependentUpon>UPCCModelWizardForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="upcc3\Wizards\util\ModelCreator.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\BDTSchemaGenerator.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\BIESchemaGenerator.cs" />
@@ -323,6 +329,10 @@
     </EmbeddedResource>
     <EmbeddedResource Include="upcc3\Wizards\GeneratorWizardForm.resx">
       <DependentUpon>GeneratorWizardForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="upcc3\Wizards\UPCCModelWizardForm.resx">
+      <DependentUpon>UPCCModelWizardForm.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Utils\AboutWindow.resx">
