Issue 48:  - Root <<bLibrary>> packages can no be found on the top level (right beneath a model package) or on the top level of a <bInformationV> package, which itself must be on the model's top level  - Changed path resolution in CCRepository to be more generic.

--- a/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
+++ b/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EARepositoryExtensionTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SynchTaggedValuesTest\SynchStereotypesTest.cs" />
     <Compile Include="upcc3\ccts\dra\DRACCRepositoryTest.cs" />
