Moved TestRepository to proper directory/namespace.

--- a/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
+++ b/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
@@ -67,27 +67,27 @@
     <Compile Include="upcc3\Wizards\util\ModelCreatorTest.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\DictionaryExtensionsTest.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\StringExtensionsTest.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\AttributeBuilder.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\ConnectorBuilder.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\DiagramBuilder.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\EAAttribute.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\EAAttributeTag.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\EAConnector.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\EAConnectorTag.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\EADiagram.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\EADiagramObject.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\EAElement.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\EARepository2.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\RepositoryItemBuilder.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\EAPackage.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\EATaggedValue.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\ElementBuilder.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\PackageBuilder.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\TaggedValueBuilder.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\EACollection.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\EARepository.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\EARepository1.cs" />
-    <Compile Include="upcc3\XSDGenerator\Generator\TestRepository\EARepositoryTest.cs" />
+    <Compile Include="TestRepository\AttributeBuilder.cs" />
+    <Compile Include="TestRepository\ConnectorBuilder.cs" />
+    <Compile Include="TestRepository\DiagramBuilder.cs" />
+    <Compile Include="TestRepository\EAAttribute.cs" />
+    <Compile Include="TestRepository\EAAttributeTag.cs" />
+    <Compile Include="TestRepository\EAConnector.cs" />
+    <Compile Include="TestRepository\EAConnectorTag.cs" />
+    <Compile Include="TestRepository\EADiagram.cs" />
+    <Compile Include="TestRepository\EADiagramObject.cs" />
+    <Compile Include="TestRepository\EAElement.cs" />
+    <Compile Include="TestRepository\EARepository2.cs" />
+    <Compile Include="TestRepository\RepositoryItemBuilder.cs" />
+    <Compile Include="TestRepository\EAPackage.cs" />
+    <Compile Include="TestRepository\EATaggedValue.cs" />
+    <Compile Include="TestRepository\ElementBuilder.cs" />
+    <Compile Include="TestRepository\PackageBuilder.cs" />
+    <Compile Include="TestRepository\TaggedValueBuilder.cs" />
+    <Compile Include="TestRepository\EACollection.cs" />
+    <Compile Include="TestRepository\EARepository.cs" />
+    <Compile Include="TestRepository\EARepository1.cs" />
+    <Compile Include="TestRepository\EARepositoryTest.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\XSDGeneratorTest.cs" />
     <Compile Include="menu\MenuManagerTest.cs" />
   </ItemGroup>
