- First implementation of a temp-file-based test repository. - Some improvements of the DRA repository.

--- a/VIENNAAddIn/VIENNAAddIn.csproj
+++ b/VIENNAAddIn/VIENNAAddIn.csproj
@@ -254,6 +254,7 @@
     <Compile Include="Utils\OptionsForm.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Utils\RepositoryCopier.cs" />
     <Compile Include="Utils\SortConnector.cs" />
     <Compile Include="Utils\UMMAddInLoggerWindow.cs">
       <SubType>Form</SubType>
