Started experiments with on-the-fly validation.

--- a/VIENNAAddIn/VIENNAAddIn.csproj
+++ b/VIENNAAddIn/VIENNAAddIn.csproj
@@ -274,6 +274,14 @@
     <Compile Include="validator\upcc3\CDTLibraryValidator.cs" />
     <Compile Include="validator\upcc3\DOCLibraryValidator.cs" />
     <Compile Include="validator\upcc3\ENUMLibraryValidator.cs" />
+    <Compile Include="validator\upcc3\onTheFly\InvalidStereotype.cs" />
+    <Compile Include="validator\upcc3\onTheFly\BackgroundOnTheFlyValidator.cs" />
+    <Compile Include="validator\upcc3\onTheFly\OnTheFlyValidator.cs" />
+    <Compile Include="validator\upcc3\onTheFly\OnTheFlyValidatorImpl.cs" />
+    <Compile Include="validator\upcc3\onTheFly\ProcessItemRequest.cs" />
+    <Compile Include="validator\upcc3\onTheFly\QuickFix.cs" />
+    <Compile Include="validator\upcc3\onTheFly\SetStereotypeQuickFix.cs" />
+    <Compile Include="validator\upcc3\onTheFly\ValidationIssue.cs" />
     <Compile Include="validator\upcc3\PRIMLibraryValidator.cs" />
     <Compile Include="validator\upcc3\UPCCValidator.cs" />
     <Compile Include="validator\ValidationMessageAddedEventArgs.cs" />
