Finalized implementation of the default UPCC3 model creator supporting dynamic load of XMI files hosted on the web as well as initial implementation of the appropriate Unit Test Cases;

--- a/VIENNAAddIn/VIENNAAddIn.csproj
+++ b/VIENNAAddIn/VIENNAAddIn.csproj
@@ -110,6 +110,7 @@
     <Compile Include="upcc3\Wizards\ImporterWizardForm.Designer.cs">
       <DependentUpon>ImporterWizardForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="upcc3\Wizards\util\ResourceHandler.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\CCSchemaGenerator.cs" />
     <Compile Include="upcc3\XSDGenerator\Generator\CDTSchemaGenerator.cs" />
     <Compile Include="Utils\DictionaryExtensions.cs" />
