- Simplified implementation of TaggedValues enum:   - enum members are now named exactly as the tagged value names (so that ToString() will work as expected). - Changed CCTSSpec to use spec property names to match properties to tagged values.

--- a/VIENNAAddIn/VIENNAAddIn.csproj
+++ b/VIENNAAddIn/VIENNAAddIn.csproj
@@ -105,8 +105,10 @@
     <Compile Include="menu\AddInContext.cs" />
     <Compile Include="upcc3\ccts\ACCSpec.cs" />
     <Compile Include="upcc3\ccts\ASCCSpec.cs" />
+    <Compile Include="upcc3\ccts\AttributeSpec.cs" />
     <Compile Include="upcc3\ccts\BCCSpec.cs" />
     <Compile Include="upcc3\ccts\CCSpec.cs" />
+    <Compile Include="upcc3\ccts\ConnectorSpec.cs" />
     <Compile Include="upcc3\ccts\dra\ElementLibrary.cs" />
     <Compile Include="upcc3\ccts\dra\IUpdateable.cs" />
     <Compile Include="upcc3\ccts\ENUMSpec.cs" />
