--- a/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
+++ b/VIENNAAddInUnitTests/VIENNAAddInUnitTests.csproj
@@ -64,6 +64,7 @@
     <Compile Include="upcc3\Wizards\TestRepository\EARepositoryModelCreator.cs" />
     <Compile Include="upcc3\Wizards\TestRepository\EARepositoryCache.cs" />
     <Compile Include="upcc3\Wizards\TestRepository\EARepositoryResourceHandler.cs" />
+    <Compile Include="upcc3\Wizards\util\DatabaseHandlerTest.cs" />
     <Compile Include="upcc3\Wizards\util\ResourceHandlerTest.cs" />
     <Compile Include="upcc3\XSDImporter\ccts\XSDImporterTest.cs" />
     <Compile Include="Utils\EAAssert.cs" />
